# integration-hub

./: .env.aws.example  .gitignore  AGENTS.md  Dockerfile.local  Makefile  README.md  amplify.yml  app.py  cdk.json  docker-compose.yml  make.ps1  package-lock.json  package.json  pyproject.toml  requirements-local.txt  requirements.txt
docs/: AI_FORMATTER_DESIGN.md  ARCHITECTURE.md  FIRST_BUILD_AND_DEPLOY.md  PROJECT_RESTRUCTURE_AGENT_INSTRUCTION.md  Vision.docx  aws-architecture.drawio  canon-audit-report.md  spec_checklist.md  todo.txt  ~$Vision.docx
infra/: __init__.py  env_config.py
lambdas/: __init__.py
tests/: conftest.py  test_admin_guard.py  test_ai_debugger_endpoints.py  test_ai_execute_central.py  test_ai_formatter_helper.py  test_ai_tool.py  test_allowlist_change_requests.py  test_approval_utils_allowlist.py  test_approval_utils_feature_gates.py  test_audit_lambda.py  test_canonical_error.py  test_canonical_execute_endpoints.py  test_canonical_mapping_endpoints.py  test_data_plane_stack_bedrock_iam.py  test_endpoint_utils.py  test_endpoint_verifier_lambda.py  test_flow_builder.py  test_jwt_auth.py  test_local_api.py  test_mapping_utils.py  test_migration_single_active_constraints.py  test_mission_control_api.py  test_mission_control_service.py  test_observability.py  test_onboarding_lambda.py  test_placeholder.py  test_platform_rollout.py  test_policy_decision_logging.py  test_policy_engine.py  test_policy_preview.py  test_policy_simulator.py  test_registry_canonical_explorer.py  test_registry_lambda.py  test_registry_readiness_canonical.py  (+30 more)
(+537 files in other folders)
